# whisper_streaming

./: pyproject.toml  whisper_online.py
