[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper_streaming"
version = "0.1.0"
description = "Whisper realtime streaming for long speech-to-text transcription and translation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["whisper", "speech-to-text", "streaming", "transcription", "asr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy",
    "librosa",
    "soundfile",
]

[project.optional-dependencies]
faster-whisper = ["faster-whisper"]
whisper-timestamped = ["whisper-timestamped"]
openai = ["openai"]
mlx = ["mlx-whisper"]
vac = ["torch", "torchaudio"]
all = [
    "faster-whisper",
    "torch",
    "torchaudio",
]

[tool.setuptools]
py-modules = ["whisper_online", "whisper_online_server", "line_packet", "silero_vad_iterator"]
